Fixed issues in FILAB image deployment scripts